client/src/index.css
body {
	background: #f7f7f7;
	margin-top: 152px;
}

fieldset {
	background: white;
	border: 1px solid #eee;
	padding: 3rem;
	margin: 3rem 0;
}

fieldset legend small {
	float: right;
	font-size: 1.4rem;
	font-weight: bold;
	color: #333;
	margin: 0.5rem;
}

.btn-group .radio-inline, .btn-group-vertical .radio-inline {
	padding: 0;
	margin: 0;
}

.btn-group .radio-inline input, .btn-group-vertical .radio-inline input {
	display: none;
}

.header-content {
	margin-left: 10%;
	width: 55%;
}

.header-content > * {
	margin: 0;
	padding: 0;
}

